# Linear-and-Logistic-Regression-in-Rust

./: Cargo.toml  README.md
data/: rep_height_weights.csv
src/: linear.rs  logistic.rs  main.rs  process_data.rs
